--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<header>
+  <app-toolbar></app-toolbar>
+</header>
+<app-sidenavigation class="side-navigation"></app-sidenavigation>
