--- a/src/app/components/sections/groups/groups.component.html
+++ b/src/app/components/sections/groups/groups.component.html
@@ -2,46 +2,58 @@
   <h4>Обрати навчальну групу</h4>
   <mat-form-field>
     <mat-label>Група</mat-label>
-    <mat-select>
-      <mat-option>None</mat-option>
-      <mat-option *ngFor="let group of groups" [value]="group">{{group}}</mat-option>
+    <mat-select
+      (selectionChange)="onSelectGroupResult($event.value)"
+      [value]="groups[0]"
+    >
+      <mat-option *ngFor="let group of groups" [value]="group">{{
+        group
+      }}</mat-option>
     </mat-select>
   </mat-form-field>
 
-    <h2>{{title}}</h2>
-    <div class="statistic-criterias">
-      <div class="card-row">
-        <mat-card class="card" *ngFor="let criteria of statisticsCriteria">
-          <mat-card-header>
-            <mat-card-title-group>
-              <mat-card-title><h4>{{criteria.name}}</h4></mat-card-title>
-            </mat-card-title-group>
+  <h2>{{ title }}</h2>
+  <div class="statistic-criterias">
+    <div class="card-row">
+      <mat-card class="card" *ngFor="let criteria of statisticsCriteria">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title
+              ><h4>{{ criteria.name }}</h4></mat-card-title
+            >
+          </mat-card-title-group>
 
-            <mat-card-content>{{criteria.value}}</mat-card-content>
-          </mat-card-header>
-        </mat-card>
-      </div>
+          <mat-card-content>{{ criteria.value }}</mat-card-content>
+        </mat-card-header>
+      </mat-card>
+    </div>
   </div>
-<!--  <div class="card-row">-->
-<!--    <mat-card class="card">-->
-<!--      <mat-card-header class="card-header">-->
-<!--        <mat-card-title><h4>Розподіл оцінок студентів за рівнем</h4></mat-card-title>-->
-<!--      </mat-card-header>-->
-<!--      <mat-card-content class="card-content">-->
-<!--        <app-dognut-chart></app-dognut-chart>-->
-<!--      </mat-card-content>-->
-<!--      <mat-divider></mat-divider>-->
-<!--      <p>stats criterias</p>-->
-<!--      <p>stats criterias</p>-->
-<!--    </mat-card>-->
-<!--    &lt;!&ndash;     third card&ndash;&gt;-->
-<!--    <mat-card class="card">-->
-<!--      <mat-card-header class="card-header">-->
-<!--        <mat-card-title> <h4>Рейтинг студентів за підсумками сесії</h4></mat-card-title>-->
-<!--      </mat-card-header>-->
-<!--      <mat-card-content class="card-content">-->
-<!--        <app-bar-chart></app-bar-chart>-->
-<!--      </mat-card-content>-->
-<!--    </mat-card>-->
-<!--  </div>-->
+  <div *ngFor="let student of students">
+    <p>
+      {{ student.name }} has {{ student.group }} at semester
+      {{ student.semester }}
+    </p>
+  </div>
+  <!--  <div class="card-row">-->
+  <!--    <mat-card class="card">-->
+  <!--      <mat-card-header class="card-header">-->
+  <!--        <mat-card-title><h4>Розподіл оцінок студентів за рівнем</h4></mat-card-title>-->
+  <!--      </mat-card-header>-->
+  <!--      <mat-card-content class="card-content">-->
+  <!--        <app-dognut-chart></app-dognut-chart>-->
+  <!--      </mat-card-content>-->
+  <!--      <mat-divider></mat-divider>-->
+  <!--      <p>stats criterias</p>-->
+  <!--      <p>stats criterias</p>-->
+  <!--    </mat-card>-->
+  <!--    &lt;!&ndash;     third card&ndash;&gt;-->
+  <!--    <mat-card class="card">-->
+  <!--      <mat-card-header class="card-header">-->
+  <!--        <mat-card-title> <h4>Рейтинг студентів за підсумками сесії</h4></mat-card-title>-->
+  <!--      </mat-card-header>-->
+  <!--      <mat-card-content class="card-content">-->
+  <!--        <app-bar-chart></app-bar-chart>-->
+  <!--      </mat-card-content>-->
+  <!--    </mat-card>-->
+  <!--  </div>-->
 </div>
